--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eureka-mixin-query-parametrable-widget",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "A mixin that allows Eureka's widgets to handle query params.",
   "directories": {
     "doc": "doc",
     "test": "tests"
