--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "glob": "^4.0.5"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "eureka-mixin"
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
